--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,16 @@
 .nav-link{
     cursor: pointer;
 }
+
+::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
