--- a/src/App.css
+++ b/src/App.css
@@ -30,5 +30,5 @@
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
+	background-color: rgb(185, 164, 185);
 }
